force-app/main/default/objects/Contact/fields/addr__c.field-meta.xml
<CustomField>
    <fullName>addr__c</fullName>
    <label>addr</label>
    <length>255</length>
    <type>Text</type>
</CustomField>