force-app/main/default/objects/Contact/fields/commentsXNRTF__c.field-meta.xml
<CustomField>
    <fullName>commentsXNRTF__c</fullName>
    <label>commentsXNRTF</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>