force-app/main/default/objects/Contact/fields/DocumentId__c.field-meta.xml
<CustomField>
    <fullName>DocumentId__c</fullName>
    <label>Document Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>