force-app/main/default/objects/Contact/fields/FS_Alternate_Phone_Cell__c.field-meta.xml
<CustomField>
    <fullName>FS_Alternate_Phone_Cell__c</fullName>
    <label>Alternate Phone/Cell</label>
    <type>Phone</type>
</CustomField>