force-app/main/default/objects/Contact/fields/FS_AP_Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>FS_AP_Contact_Type__c</fullName>
    <label>AP Contact Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Secondary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>