force-app/main/default/objects/Contact/fields/FS_Contact_Info_Complete__c.field-meta.xml
<CustomField>
    <fullName>FS_Contact_Info_Complete__c</fullName>
    <formula>IF(AND(Phone &lt;&gt; &quot;&quot;, Email &lt;&gt; &quot;&quot;),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Info Complete</label>
    <type>Checkbox</type>
</CustomField>