force-app/main/default/objects/Contact/fields/FS_Execution_Plan_Contact__c.field-meta.xml
<CustomField>
    <fullName>FS_Execution_Plan_Contact__c</fullName>
    <formula>NOT(ISBLANK(FS_Execution_Plan_Role__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Execution Plan Contact</label>
    <type>Checkbox</type>
</CustomField>