force-app/main/default/objects/Contact/fields/FS_Execution_Plan_Role__c.field-meta.xml
<CustomField>
    <fullName>FS_Execution_Plan_Role__c</fullName>
    <label>Contact Role</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Primary Contact</fullName>
            </value>
            <value>
                <fullName>Secondary Contact</fullName>
            </value>
            <value>
                <fullName>Accounts Payable Contact</fullName>
            </value>
            <value>
                <fullName>Site Assessment Contact</fullName>
            </value>
            <value>
                <fullName>Secondary Site Assessment Contact</fullName>
            </value>
            <value>
                <fullName>Contractor Contact</fullName>
            </value>
            <value>
                <fullName>On-Board Training Contact</fullName>
            </value>
            <value>
                <fullName>Installation Contact</fullName>
            </value>
            <value>
                <fullName>Coke Smart Admin User</fullName>
            </value>
            <value>
                <fullName>Coke Smart Standard User</fullName>
            </value>
            <value>
                <fullName>Order Confirmation Contact</fullName>
            </value>
            <value>
                <fullName>Shipment Confirmation Contact</fullName>
            </value>
            <value>
                <fullName>Credit Confirmation Contact</fullName>
            </value>
            <value>
                <fullName>Water Filter Contact</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>