force-app/main/default/objects/Contact/fields/FS_Execution_Plan_Role_Text__c.field-meta.xml
<CustomField>
    <fullName>FS_Execution_Plan_Role_Text__c</fullName>
    <label>Execution Plan Role Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>