force-app/main/default/objects/Contact/fields/FS_Migration_External_ID__c.field-meta.xml
<CustomField>
    <fullName>FS_Migration_External_ID__c</fullName>
    <description>Field created by H.Whitacre 10/10/13 to use as a Unique Key for data migration.</description>
    <externalId>true</externalId>
    <inlineHelpText>MIGRATION ONLY - Unique value for data migration of this Contact</inlineHelpText>
    <label>Migration External ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>