force-app/main/default/objects/Contact/fields/FS_Preferred_Mode_of_Communication__c.field-meta.xml
<CustomField>
    <fullName>FS_Preferred_Mode_of_Communication__c</fullName>
    <label>Preferred Mode of Communication</label>
    <length>255</length>
    <type>Text</type>
</CustomField>