force-app/main/default/objects/Contact/fields/FS_SP_Code__c.field-meta.xml
<CustomField>
    <fullName>FS_SP_Code__c</fullName>
    <formula>Account.FS_SP_Code__c</formula>
    <label>SP Code Formula</label>
    <type>Text</type>
</CustomField>