force-app/main/default/objects/Contact/fields/FS_SP_Code_text__c.field-meta.xml
<CustomField>
    <fullName>FS_SP_Code_text__c</fullName>
    <label>SP Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>