force-app/main/default/objects/Contact/fields/FS_SP_Contact_Active__c.field-meta.xml
<CustomField>
    <fullName>FS_SP_Contact_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>