force-app/main/default/objects/Contact/fields/FS_SP_Role__c.field-meta.xml
<CustomField>
    <fullName>FS_SP_Role__c</fullName>
    <label>SP Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Backup</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>FSS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>