force-app/main/default/objects/Contact/fields/FS_To_be_migrated__c.field-meta.xml
<CustomField>
    <fullName>FS_To_be_migrated__c</fullName>
    <formula>Account.FS_ToBeMigrated__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>To be migrated</label>
    <type>Checkbox</type>
</CustomField>