force-app/main/default/objects/Contact/fields/LastModified__c.field-meta.xml
<CustomField>
    <fullName>LastModified__c</fullName>
    <label>Last modified</label>
    <type>DateTime</type>
</CustomField>