force-app/main/default/objects/Contact/fields/mktid__c.field-meta.xml
<CustomField>
    <fullName>mktid__c</fullName>
    <label>mktid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>