force-app/main/default/objects/Contact/fields/REF__c.field-meta.xml
<CustomField>
    <fullName>REF__c</fullName>
    <label>REF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>