force-app/main/default/objects/Contact/fields/XN_version__c.field-meta.xml
<CustomField>
    <fullName>XN_version__c</fullName>
    <label>XN_version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>