force-app/main/default/objects/Contact/recordTypes/Bottler_Contact.recordType-meta.xml
<RecordType>
    <fullName>Bottler_Contact</fullName>
    <active>true</active>
    <description>Contacts Associated to Bottlers</description>
    <label>Bottler Contact</label>
</RecordType>