force-app/main/default/objects/Contact/recordTypes/CCR_Customer.recordType-meta.xml
<RecordType>
    <fullName>CCR_Customer</fullName>
    <active>true</active>
    <label>Customer</label>
</RecordType>