force-app/main/default/objects/Contact/listViews/All_Community_Users_Contacts.listView-meta.xml
<ListView>
    <fullName>All_Community_Users_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.LAST_NAME</columns>
    <columns>CONTACT.FIRST_NAME</columns>
    <columns>CONTACT.RECORDTYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.CCR_Customer</value>
    </filters>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>equals</operation>
        <value>Freestyle Customer Service Escalation</value>
    </filters>
    <label>All Community Users Contacts</label>
</ListView>