force-app/main/default/objects/Contact/listViews/Bottler_Contacts.listView-meta.xml
<ListView>
    <fullName>Bottler_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Warehouse_Country__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Bottler_Contact</value>
    </filters>
    <label>Bottler Contacts</label>
</ListView>