force-app/main/default/objects/Contact/listViews/Test_Contact.listView-meta.xml
<ListView>
    <fullName>Test_Contact</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FULL_NAME</field>
        <operation>contains</operation>
        <value>David</value>
    </filters>
    <label>Test Contact</label>
</ListView>